--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,9 +1,8 @@
 pipeline {
-    agent any{
-     
-    }
-    environment {
-        CI = 'true'
+    agent any
+    
+    tools {
+        nodejs "node"
     }
     stages {
         stage('Build') {
