--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -5,6 +5,12 @@ pipeline {
         nodejs "node"
     }
     stages {
+        
+        stage('Git') {
+      steps {
+        git 'https://github.com/prashantsagar73/devops-task'
+        }
+     }
         stage('Build') {
             steps {
                 sh 'npm install'
