--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -13,12 +13,12 @@ pipeline {
      }
         stage('Build') {
             steps {
-                sh 'npm install'
+                bat 'npm install'
             }
         }
         stage('Test') {
             steps {
-                sh './jenkins/scripts/test.sh'
+                bat './jenkins/scripts/test.sh'
             }
         }
         
